package com.mindeurfou.model.course

data class Course(
    val id: Int,
    val name : String,
    val numberOfHOles : Int,
    val par : Int,
    val gamesPlayed : Int
)
