package com.mindeurfou.model.game

enum class GameState {
    WAITING,
    PENDING,
    DONE
}