package com.mindeurfou.model.player

data class Hole(
    val id : Int,
    val holeNumber : Int,
    val par : Int
)
