@startuml
'https://plantuml.com/class-diagram

enum GameState {
    WAITING
    PENDING
    DONE
}

enum TournamentState {
    PENDING
    DONE
}

class Player {
    name : String
    lastName : String
    username : String
    drawableResourceId : Int
}

interface ScoringStrategy {
    calculateScores()
}

class LeaderBoard {
    leaderBoard : map<String, Int>
}

class Tournament {
    name : String
    state : TournamentState
}

class Game {
    scoreBook : map<String, List<Int>>
    state : GameState
    currentHole : Int
}

class Course {
    name : String
    numberOfHoles : Int
    par : Int
    gamesPlayed : Int
}

class Hole {
    holeNumber : Int
    par : Int
}

Course "1" *-- "many" Hole
Game "many" *-- "many" Player
Game "many" *-- "1" Course
Tournament "1" *-- "many" Game
Tournament "1" *-- "1" LeaderBoard
ScoringStrategy <|.. LeaderBoard


@enduml